--- a/01_modal/index.html
+++ b/01_modal/index.html
@@ -33,5 +33,21 @@
       </p>
       <button>닫기</button>
     </div>
+    <script>
+      var open = $('.container button')
+      var close = $('.modal button')
+      var dimm = $('.dimm')
+      var modal = $('.modal')
+
+      open.click(function () {
+        dimm.show()
+        modal.show()
+      })
+
+      close.click(function () {
+        dimm.hide()
+        modal.hide()
+      })
+    </script>
   </body>
 </html>
