--- a/07.slide/index.html
+++ b/07.slide/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jQuery-slick slide</title>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,7 +28,11 @@
       </div>
 
       <!-- slide -->
-      <div class="slider"></div>
+      <div class="slide_01">
+        <div class="item item_01"></div>
+        <div class="item item_02"></div>
+        <div class="item item_03"></div>
+      </div>
 
       <!-- main -->
       <div class="main">
@@ -75,7 +85,21 @@
           버리었습니다. 나는 아스라히 사람들의 딴은 내 피어나듯이 까닭이요, 있습니다. 라이너 이름과,
           그러나 까닭입니다. 덮어 위에 이런 헤는 잠, 봅니다.
         </p>
+        <p>
+          책상을 봄이 헤는 이런 노루, 추억과 계절이 덮어 계십니다. 마리아 쉬이 하나에 봅니다. 아침이
+          별 지나가는 별을 어머님, 사람들의 까닭입니다. 소녀들의 옥 프랑시스 추억과 없이 했던 가득
+          까닭입니다. 잔디가 위에도 가득 너무나 별들을 겨울이 그리워 까닭이요, 봅니다. 아직 이
+          어머니, 듯합니다. 이제 벌레는 아름다운 한 계십니다. 어머니 어머니, 피어나듯이
+          버리었습니다. 나는 아스라히 사람들의 딴은 내 피어나듯이 까닭이요, 있습니다. 라이너 이름과,
+          그러나 까닭입니다. 덮어 위에 이런 헤는 잠, 봅니다.
+        </p>
       </div>
     </div>
+
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script>
+      $('.slide_01').slick({})
+    </script>
   </body>
 </html>
