--- a/07.slide/index.html
+++ b/07.slide/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -19,12 +20,49 @@
       <div class="header">
         <h1>로고</h1>
         <ul class="nav">
-          <li><a href="#x">홈</a></li>
-          <li><a href="#x">소개</a></li>
-          <li><a href="#x">서비스</a></li>
-          <li><a href="#x">블로그</a></li>
-          <li><a href="#x">연락하기</a></li>
+          <li>
+            <a href="#x">소개</a>
+            <ul>
+              <li><a href="#x">인사말</a></li>
+              <li><a href="#x">주요연혁</a></li>
+              <li><a href="#x">수상내역</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#x">서비스</a>
+            <ul>
+              <li><a href="#x">리서치</a></li>
+              <li><a href="#x">기업윤리</a></li>
+              <li><a href="#x">기업윤리규범</a></li>
+              <li><a href="#x">프라이버시</a></li>
+              <li><a href="#x">라이브러리</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#x">블로그</a>
+            <ul>
+              <li><a href="#x">보도자료</a></li>
+              <li><a href="#x">TV광고</a></li>
+              <li><a href="#x">미디어행사</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#x">포트폴리오</a>
+            <ul>
+              <li><a href="#x">기업지배구조</a></li>
+              <li><a href="#x">주주구성</a></li>
+              <li><a href="#x">이사회</a></li>
+              <li><a href="#x">정관</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#x">연락하기</a>
+            <ul>
+              <li><a href="#x">채용정보</a></li>
+            </ul>
+          </li>
         </ul>
+        <div class="user"><i class="xi-user"></i></div>
       </div>
 
       <!-- slide -->
@@ -60,6 +98,13 @@
           버리었습니다. 나는 아스라히 사람들의 딴은 내 피어나듯이 까닭이요, 있습니다. 라이너 이름과,
           그러나 까닭입니다. 덮어 위에 이런 헤는 잠, 봅니다.
         </p>
+        <!-- sild_02 -->
+        <div class="slide_02">
+          <div class="item"><img src="../images/img_01.jpg" alt="" /></div>
+          <div class="item"><img src="../images/img_02.jpg" alt="" /></div>
+          <div class="item"><img src="../images/img_03.jpg" alt="" /></div>
+          <div class="item"><img src="../images/img_04.jpg" alt="" /></div>
+        </div>
         <p>
           책상을 봄이 헤는 이런 노루, 추억과 계절이 덮어 계십니다. 마리아 쉬이 하나에 봅니다. 아침이
           별 지나가는 별을 어머님, 사람들의 까닭입니다. 소녀들의 옥 프랑시스 추억과 없이 했던 가득
@@ -110,6 +155,38 @@
         dots: true,
         nextArrow: $('.next'),
         prevArrow: $('.prev'),
+      })
+
+      $('.slide_02').slick({
+        dots: true,
+        slidesToShow: 2,
+        slidesToScroll: 2,
+      })
+    </script>
+
+    <script>
+      $('.nav li').hover(function () {
+        $(this).find('ul').stop().slideToggle('fast')
+      })
+
+      $(window).scroll(function () {
+        if ($(this).scrollTop() > 200) {
+          $('.header').addClass('on')
+        } else {
+          $('.header').removeClass('on')
+        }
+
+        if ($(this).scrollTop() > 600) {
+          $('.go_top').fadeIn()
+        } else {
+          $('.go_top').fadeOut()
+        }
+      })
+    </script>
+
+    <script>
+      $('.go_top').click(function () {
+        $('html').animate({ scrollTop: 0 }, 400)
       })
     </script>
   </body>
